FIXED: Price labels don't get cut off - we don't need the padding-top any more.

--- a/src/LineChart.css
+++ b/src/LineChart.css
@@ -1,7 +1,6 @@
 .linechart {
   margin-top: 1em;
-  padding-top: 1em;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 .linechart_path {
